--- a/Views/Account/ConfirmEmail.cshtml
+++ b/Views/Account/ConfirmEmail.cshtml
@@ -1,3 +1,22 @@
 ﻿@model dynamic
-<h2>Email Confirmation</h2> 
-<p>@Model.Message</p>
+@{
+    ViewData["Title"] = "Email verification"; 
+}
+
+<div class = "container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-header bg-primary text-white text-center">
+                    <h3>Email Confirmation</h3>
+                </div>
+                <div class="card-body text-center">
+                    <p class="card-text">@Model.Message</p>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="@Url.Action("Login","Account")" class="btn btn-success">Go to Login</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
