--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Login";
 }
 
+<link rel="stylesheet" href="~/css/login.css">
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -18,10 +20,14 @@
                     <label for="password" class="form-label">Password:</label>
                     <input type="password" class="form-control" id="password" required />
                 </div>
-                <button type="button" onclick="login()" class="btn btn-primary w-100 mb-3">Login</button>
-                <a class="btn btn-primary w-100" href="/api/auth/login-google">
+                <button type="button" onclick="login()" class="btn btn-custom-login w-100 mb-3">Login</button>
+                <a class="btn btn-custom-google w-100 mb-3" href="/api/auth/login-google">
                     <img src="https://developers.google.com/identity/images/g-logo.png" width="20" height="20" alt="Google logo" />
                     Login with Google
+                </a>
+                <a class="btn btn-custom-microsoft w-100" href="/api/auth/login-microsoft">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" width="20" height="20" alt="Microsoft logo" />
+                    Login with Microsoft
                 </a>
             </div>
             <p class="mt-3 text-center">
@@ -31,5 +37,4 @@
     </div>
 </div>
 <script src="~/js/login.js"></script>
-
 
