--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Register";
 }
+<link rel="stylesheet" href="~/css/login.css" />
 
 <div class="container mt-5">
     <div class="row justify-content-center">
@@ -18,7 +19,7 @@
                     <label for="username" class="form-label">Username:</label>
                     <input type="text" class="form-control" id="username" required />
                 </div>
-                <button type="button" onclick="register()" class="btn btn-primary w-100">Register</button>
+                <button type="button" onclick="register()" class="btn btn-custom-login w-100">Register</button>
             </div>
 
             <p class="mt-3 text-center">
@@ -27,5 +28,4 @@
         </div>
     </div>
 </div>
-
 <script src="~/js/register.js"></script>
