Calculate used Ram, DiskC

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -67,11 +67,11 @@
             <th>Name</th>
             <th>IP Address</th>
             <th>Port</th>
-            <th>Monitoring</th>
+            <th>Active</th>
             <th>Polling Status</th>
             <th>Last Check</th>
-            <th>CPU & OS Version</th>
-            <th>Uptime (Raw Sec)</th>
+            <th>Hardware and OS</th>
+            <th>Uptime</th>
         </tr>
     </thead>
     <tbody id="deviceList">
