--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home";
 }
 @model IEnumerable<LoginWeb.ViewModels.DeviceDisplayViewModel>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+@* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"> *@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/zephyr/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 
@@ -10,12 +11,12 @@
 <div id="customMessageBox" class="message-box"></div>
 
 <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center mb-4">
-    <h2 class="mb-3 mb-md-0">Welcome, @Context.Session.GetString("Username")!</h2>
+    <h3 class="mb-3 mb-md-0">Device Information</h3>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addDeviceModal">
+        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#addDeviceModal">
             <i class="bi bi-plus-circle"></i> Add New Device
         </button>
-        <button id="refreshDeviceListButton" class="btn btn-info">
+        <button id="refreshDeviceListButton" class="btn btn-secondary">
             <i class="bi bi-arrow-clockwise"></i> Refresh Data
         </button>
     </div>
@@ -23,7 +24,7 @@
 
 <hr />
 
-<div class="row">
+<div class="row mb-4">
     <div class="col-md-4">
         <div class="mb-3">
             <input type="text" id="deviceSearchInput" class="form-control" placeholder="Search devices...">
@@ -85,7 +86,7 @@
 
                     <hr />
                     <div class="text-end">
-                        <button id="generate-device-summary-button" class="btn btn-secondary">Generate Device Summary</button>
+                        <button id="generate-device-summary-button" class="btn btn-dark">Generate Device Summary</button>
                     </div>
                 </div>
             </div>
@@ -93,14 +94,13 @@
     </div>
 </div>
 
-<hr class="my-4" />
-
-<h3>All Devices Overview</h3>
+<h3 class="my-4">My Devices</h3>
+<hr />
 <div class="table-responsive">
     @* add this class for stacking rows: table-responsive-stack *@
     <table class="table table-striped table-hover table-responsive-stack">
         <thead>
-            <tr>
+            <tr class="table-active">
                 <th>Name</th>
                 <th>IP Address</th>
                 <th>Port</th>
@@ -183,7 +183,7 @@
         <label for="reportTitleInput" class="me-2">Report Title:</label>
         <input type="text" class="me-2 form-control" id="reportTitleInput" required style="width: 200px;">
 
-        <button type="button" id="generateReportButton" class="btn btn-primary">Generate Summary Report</button>
+        <button type="button" id="generateReportButton" class="btn btn-dark">Generate Summary Report</button>
     </div>
 </form>
 
